fix: applications spacing changes

--- a/sites/public/src/pages/account/account.module.scss
+++ b/sites/public/src/pages/account/account.module.scss
@@ -1,14 +1,23 @@
 .account-card-container {
   padding-inline: var(--seeds-s6);
   @media (max-width: theme("screens.sm")) {
-    padding-inline: 0rem;
-    padding-block: var(--seeds-s4);
+    padding: var(--seeds-s4);
   }
 }
 
-.account-card-section {
-  @media (min-width: theme("screens.sm")) {
-    --card-content-padding-inline: var(--seeds-s12);
+.account-card-applications-section {
+  --card-content-padding-inline: var(--seeds-s12);
+  @media (max-width: theme("screens.sm")) {
+    --card-content-padding-inline: var(--seeds-s4);
+    --card-content-padding-block: var(--seeds-s4);
+  }
+}
+
+.account-card-edit-section {
+  --card-content-padding-inline: var(--seeds-s12);
+  @media (max-width: theme("screens.sm")) {
+    --card-content-padding-inline: var(--seeds-s4);
+    --card-content-padding-block: var(--seeds-s6);
   }
 }
 
@@ -19,7 +28,7 @@
 
 .application-no-results {
   padding: var(--seeds-s4);
-  background-color: var(--seeds-color-secondary-lighter);
+  background-color: var(--seeds-bg-color-muted);
 }
 .application-no-results-text {
   padding-bottom: var(--seeds-s6);
